# LLAtoECF

./: CMakeLists.txt  README.md
include/: LLAtoECF.h  csv_utils.h  gps_structs.h
src/: LLAtoECF.cpp  csv_utils.cpp  interpolateVelocity.cpp  read_record.cpp
